# practice

./: .gitignore  LICENSE
Imports/gtest/lib/msvc2010/: gtest-md.lib  gtest-mdd.lib  gtest-mt.lib  gtest-mtd.lib
String/project/: CMakeLists.txt  source_file.txt
cpp/Imports/gtest/: CMakeLists.txt
cpp/Imports/gtest/lib/msvc2010/: gtest-md.lib  gtest-mdd.lib
cpp/String/project/: CMakeLists.txt  build.py  source_file_list.py
cpp/String/source/: String.cpp  main.cpp
cpp/chrono/: CMakeLists.txt  chrono_practice.cpp  date.h
cpp/smart_pointer/: CMakeLists.txt  smart_pointer.cpp
cpp/std_wstring/: CMakeLists.txt  wstring_example.cpp
cpp/std_wstring/windows/: WinUnicodeUtil.cpp  WinUnicodeUtil.h
cpp/template/project/: CMakeLists.txt  build.py  source_file.txt
cpp/template/source/: function_as_template_argument.cpp  main.cpp  variadic_template.cpp
eight_queens/: README.md
eight_queens/cpp/project/: CMakeLists.txt  source_file.txt
eight_queens/cpp/source/: eight_queens.cpp
eight_queens/java/: CMakeLists.txt
eight_queens/java/EightQueens/src/: Main.java
eight_queens/java/EightQueens/src/solution/: ChessBoard.java  Queen.java
eight_queens/java/EightQueens/src/solution/test/: ChessBoardTest.java  QueenTest.java
eight_queens/javascript/: eight_queens.html
eight_queens/python/: eight_queens.py
glsl/: README.md
glsl/RoundedRectangle/: RoundedRectangle.frag.c
python/: unicode-decode.py
std_wstring/: Makefile  wstring_example.cpp
